pushed with changes

--- a/Frontend/mentalHealth.html
+++ b/Frontend/mentalHealth.html
@@ -17,10 +17,8 @@
     <h2 class='container text-center mb-5'>The following asks about various kinds of worries that you might have experienced over the past seven days. In the following statements, we refer to COVID-19 as "the virus".</h2>
     <div class='container d-flex flex-column align-items-center fade-in-bottom' id='question'>
         <h3 class='container mb-4 text-center' id='questionText'>I am worried about catching the virus</h3>
-        <input class="btn btn-primary my-2 w-50" type="button" value="Not at all" onclick="nextQuestion(0)">
-        <input class="btn btn-primary my-2 w-50" type="button" value='Slightly' onclick="nextQuestion(1)">
-        <input class="btn btn-primary my-2 w-50" type="button" value='Moderately ' onclick="nextQuestion(2)">
-        <input class="btn btn-primary my-2 w-50" type="button" value='Very' onclick="nextQuestion(3)">
-        <input class="btn btn-primary my-2 w-50" type="button" value='Extremely' onclick="nextQuestion(4)">
+        <input class="btn btn-primary my-2 w-50" type="button" value="Yes" onclick="nextQuestion(1)">
+        <input class="btn btn-primary my-2 w-50" type="button" value='No' onclick="nextQuestion(0)">
+        <input class="btn btn-primary my-2 w-50" type="button" value='Maybe' onclick="nextQuestion(.5)">
     </div>
 </body>
