--- a/Frontend/mentalHealth.html
+++ b/Frontend/mentalHealth.html
@@ -9,16 +9,32 @@
     <script src='mentalHealth.js'></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/e9d9c506c6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1 class='ml-5'>Assessment</h1>
+    <h1 class='text-center'>Assessment</h1>
     <hr>
-    <h2 class='container text-center mb-5'>The following asks about various kinds of worries that you might have experienced over the past seven days. In the following statements, we refer to COVID-19 as "the virus".</h2>
-    <div class='container d-flex flex-column align-items-center fade-in-bottom' id='question'>
-        <h3 class='container mb-4 text-center' id='questionText'>I am worried about catching the virus</h3>
-        <input class="btn btn-primary my-2 w-50" type="button" value="Yes" onclick="nextQuestion(1)">
-        <input class="btn btn-primary my-2 w-50" type="button" value='No' onclick="nextQuestion(0)">
+
+    <div class='progress w-25 mx-auto' id='progressBar'>
+        <div class='progress-bar' id='progressFill' role='progressbar' aria-valuenow='0' aria-valuemin='0'
+            aria-valuemax='100'></div>
+    </div>
+    <div class='container d-flex flex-column align-items-center mt-3 fade-in-bottom' id='question'>
+        <h3 class='container mb-4 text-center' id='questionText'>Are you hydrated?</h3>
+        <input class="btn btn-primary my-2 w-50" type="button" value="Yes" onclick="nextQuestion(0)">
+        <input class="btn btn-primary my-2 w-50" type="button" value='No' onclick="nextQuestion(1)">
         <input class="btn btn-primary my-2 w-50" type="button" value='Maybe' onclick="nextQuestion(.5)">
+    </div>
+    <div class='w-50 mx-auto d-none fade-in-bottom' id='stressBar'>
+        <div id='indicator'>
+            <i class="fas fa-caret-up" id='arrow'></i>
+        </div>
+    </div>
+    <div id='recommendDiv' class='container d-none mt-3 flex-column align-items-center fade-in-bottom'>
+        <p class='text-center'>Your stress seems to be at a <span id='colorText'></span> level.</p>
+        <p class='text-center'>We recommend:</p>
+        <div id='resource1'>
+        </div>
     </div>
 </body>
