Added fetch request, and random function

--- a/Frontend/mentalHealth.html
+++ b/Frontend/mentalHealth.html
@@ -34,7 +34,7 @@
     <div id='recommendDiv' class='container d-none mt-3 flex-column align-items-center fade-in-bottom'>
         <p class='text-center'>Your stress seems to be at a <span id='colorText'></span> level.</p>
         <p class='text-center'>We recommend:</p>
-        <div id='resource1'>
-        </div>
+        <div id='resource1'></div>
+        <div id='resource2'></div>
     </div>
 </body>
