--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="resources.html">Resources</a></li>
-                    <li><a href="questionnaire.html">Questionnaire</a></li>
+                    <li><a href="Resources.html">Resources</a></li>
+                    <li><a href="Assessment.html">Assessment</a></li>
                 </ul>
             </nav>
         </div>
