--- a/Resources/Phone.html
+++ b/Resources/Phone.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='../style.css'>
     <link rel='stylesheet' href='../utilities.css'>
     <link rel='stylesheet' href='../resources.css'>
-
+    <script src='resources.js'></script>
     <!--  <style>
             P {
                 font-size: 20px;
@@ -31,7 +31,7 @@
         </style> -->
 </head>
 
-<Body>
+<Body onLoad='fetchResource(2)'>
     <div class="navbar">
         <div class="container flex">
             <h1 class="logo">MentalHealthYYC</h1>
@@ -44,59 +44,12 @@
             </nav>
         </div>
     </div>
-    <div class='content'>
+    <div class='content' id='resources'>
         <h1>Phone</h1>
-        <div>
-            <h2> CANADIAN MENTAL HEALTH ASSOCIATION (CMHA) </h2>
-            <p>The CMHA is a non-profit organization that builds awareness about mental health and provides individuals
-                dealing with mental health issues with advocacy, education, housing, counselling and a variety of
-                programs. Whether you or a family member are dealing with substance abuse, mental health challenges or
-                even the loss of a loved one, the CMHA Calgary chapter can help with emotional support, life coaching
-                and programming, as well as referrals to other community resources.
-            </p>
-            <a href="http://cmha.calgary.ab.ca/"></a>
-            <a href='tel:403-297-1700'>403-297-1700</a>
-        </div>
-        <div>
-            <h2>DISTRESS CENTRE </h2>
-            <p>
-                The Distress Centre is a 24-hour crisis line available in Calgary and Southern Alberta. This resource is
-                useful if you need someone to talk to or recommended resources when you are in a crisis situation. The
-                best way to describe the Distress Centre is to use their own words: “We do not define crisis. We do not
-                judge. Anyone can call us day or night.” The Distress Centre can be contacted by phone, email or online
-                chat during the day.
-            </p>
-            <a href="https://www.distresscentre.com/" target="_blank"> Vist Distress Centre</a>
-            <a href='tel:403-266-4357'>403-266-HELP</a>
-        </div>
-        <div>
-            <h2>ADDICTION HELPLINE </h2>
-            <p>
-                The Addiction Helpline is available 24/7 and is available for any Albertan suffering from addiction. The
-                helpline is confidential and provides support and referral to community services for individuals
-                suffering from alcohol, drug and gambling issues.
-            </p>
-            <a href='tel:1-866-332-2322'>1-866-332-2322</a>
-        </div>
-        <div>
-            <h2> URGENT MENTAL HEALTH IN URGENT CARE </h2>
-            <p>
-                Crisis mental health assessment and support is available at two of the Urgent Care Centres in Calgary:
-            </p>
-            <p>Sheldon M. Chumir Health Centre (SMCHC), located in the Beltline.</p>
-            <p>South Calgary Health Centre (SCHC), located in the far south near Shawnessy/Sundance</p>
-            <p>Both centres are open 7 days per week, every day of the year, with SMCHC being open 24 hours per day and
-                SCHC open from 8 am – 10 pm. Urgent Mental Health assistance is available at both sites from 8 am – 10
-                pm
-                every day. SCHC also provides walk-in, single session counselling at no fee with variable hours during
-                the
-                week.</p>
-            <a href='tel:403-943-9300'>Call 403-943-9300 to find out the hours of their walk-in counselling service.</a>
-        </div>
-        <div>
-            <button onclick="goback()" class='backButton'> Return to Main
-                Page</button>
-        </div>
+    </div>
+    <div class='content'>
+        <button onclick="goback()" class='backButton'> Return to Main
+            Page</button>
     </div>
     <footer class="footer bg-dark py-5">
         <div class="container grid grid-3">
@@ -114,15 +67,6 @@
             </nav>
         </div>
     </footer>
-    <script>
-        /* function goback() {
-            Window.history.goback("resources.html");
-
-        }*/
-        function goback() {
-            window.location = "../Resources.html"
-        }
-    </script>
 </Body>
 
 </html>
