--- a/Resources/Websites.html
+++ b/Resources/Websites.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='../style.css'>
     <link rel='stylesheet' href='../utilities.css'>
     <link rel='stylesheet' href='../resources.css'>
-        
+    <script src='resources.js'></script>
        <!--  <style>
             P {
                 font-size: 20px;
@@ -29,7 +29,7 @@
             }
         </style> -->
     </head>
-    <body>
+    <body onLoad='fetchResource(3)'>
         <div class="navbar">
             <div class="container flex">
                 <h1 class="logo">MentalHealthYYC</h1>
@@ -42,31 +42,11 @@
                 </nav>
             </div>
         </div>
-        <div class='content'>
+        <div class='content' id='resources'>
         <h1> WebSites</h1>
-        <div>
-            <h2>Depression chat rooms</h2>
-            <p>This website is dedicated to depression and anxiety peer support. The main forms of communication we offer are via our supportive Depression Chat Rooms, Depression Forums and our Depression Blog section.
-            </p>
-            <a href="http://www.depression-chat-rooms.org/" target="_blank">  Visit Depression chat rooms</a>
         </div>
-        <div>
-            <h2> Turn2Me.ie </h2>
-            <p>
-                We are a community of fully qualified and accredited mental health professionals working online to provide a high quality, safe, anonymous and confidential space for you to gain support - wherever you are, whenever you need us, for whatever you are going through.
-            </p>
-            <a href="https://turn2me.ie/" target="_blank"> Visit Turn2Me.ie website</a>
-        </div>
-        <div>
-            <h2>The Good Limbo mental health community</h2>
-            <p>
-                The Good Limbo is an online mental health community for peer based support. We have forums and a Discord chat server where you can talk to others who understand. Whether you want to seek support, or just need a distraction, we’re here for you.
-            </p>
-            <a href="https://thegoodlimbo.com/" target="_blank"> Visit The Good Limbo mental health community</a>
-        </div>
-        <div> 
+        <div class='content'> 
             <button onclick="goback()" class='backButton'> Return to Main Page</button>
-        </div>
         </div>
         <footer class="footer bg-dark py-5">
             <div class="container grid grid-3">
@@ -84,14 +64,5 @@
                 </nav>
             </div>
         </footer>
-        <script>
-            /* function goback() {
-                Window.history.goback("resources.html");
-
-            }*/
-            function goback(){
-            window.location="../Resources.html"
-        }
-        </script>
     </body>
 </html>
