--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
-            <h1 class="logo">MentalHealthYYC.</h1>
+            <h1 class="logo">MentalHealthYYC</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -28,7 +28,7 @@
             <div class="showcase-text">
                 <h1>Accessible and Evidence-Based Mental Health Resources in Calgary</h1>
                 <p>Try it yourself - FREE!</p>
-                <a href="features.html" class="btn btn-outline">Start here</a>
+                <a href="Assessment.html" class="btn btn-outline">Start here</a>
             </div>
 
             <div class="showcase-form card">
@@ -78,7 +78,8 @@ cannabis and tobacco during the early stages of the pandemic." -Center for Addic
             <div class="grid grid-3 text-center my-4">
                 <div>
                     <i class="fas fa-server fa-3x"></i>
-                    <h3>281, 0000 (Updated:<span id='date'></span> )</h3>
+                    <h3>281, 0000</h3>
+                    <p>(Updated:<span id='date'></span>)</p>
                     <p class="text-secondary">CASES OF COVID-19</p>
                 </div>
                 <div>
