--- a/Resources/Video.html
+++ b/Resources/Video.html
@@ -37,7 +37,7 @@
 <body onLoad='fetchResource(1)'>
     <div class="navbar">
         <div class="container flex">
-            <h1 class="logo">MentalHealthYYC.</h1>
+            <h1 class="logo">MentalHealthYYC</h1>
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
