--- a/resources.html
+++ b/resources.html
@@ -18,7 +18,7 @@
 <body>
     <div class="navbar">
         <div class="container flex">
-            <h1 class="logo">MentalHealthYYC.</h1>
+            <h1 class="logo">MentalHealthYYC</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
