--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="utilities.css">
     <link rel="stylesheet" href="style.css">
     <title>MentalHealthYYC</title>
 </head>
@@ -29,38 +28,6 @@
                 <h1>Accessible and Evidence-Based Mental Health Resources in Calgary</h1>
                 <p>Try it yourself - FREE!</p>
                 <a href="Assessment.html" class="btn btn-outline">Start here</a>
-            </div>
-
-            <div class="showcase-form card">
-                <h2>Contact us</h2>
-                 <!--  <form name="contact" netlify-honeypot="bot-field" method="POST" data-netlify="true">
-                    <input type="hidden" name="form-name" value="contact">
-                    <p class="hidden">
-                        <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
-                      </p>
-                    <div class="form-control">
-                        <input type="text" name="name" placeholder="Name" required>
-                    </div>
-                    <div class="form-control">
-                        <input type="text" name="company" placeholder="Company Name" required>
-                    </div>
-                    <div class="form-control">
-                        <input type="email" name="email" placeholder="Email" required>
-                    </div>
-                    <input type="submit" value="Send" class="btn btn-primary">
-                </form> -->
-                 <form>
-                    <div class="form-control">
-                        <input type="text" name="name" placeholder="Name" required>
-                    </div>
-                    <div class="form-control">
-                        <input type="text" name="company" placeholder="Company Name" required>
-                    </div>
-                    <div class="form-control">
-                        <input type="email" name="email" placeholder="Email" required>
-                    </div>
-                    <input type="submit" value="Send" class="btn btn-primary">
-                </form>
             </div>
         </div>
     </section>
@@ -107,8 +74,9 @@ cannabis and tobacco during the early stages of the pandemic." -Center for Addic
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Features</a></li>
-                    <li><a href="docs.html">Docs</a></li>
+                    <li><a href="questionnaire.html">Questionnaire</a></li>
+                    <li><a href="resources.html">Resources</a></li>
+                    <li><a href="slideshow.html">Web Infographics</a></li>
                 </ul>
             </nav>
             </div>
